# tweetBotSimple

./: .env.example  .gitignore  addDataSimple.py  config.py  fireScrape.py  generateResponse.py  helpers.py  pyproject.toml  readme.md  testResponse.py
